# wordle-clone

./: .flake8  README.md  main.py  pyproject.toml
.github/workflows/: lint_and_test.yml  pylint.yml
src/wordall/: __init__.py  game_tracker.py  main.py  utilities.py
tests/: test_game_tracker.py  test_main.py  test_main_utilities.py
tests/fixtures/: game_tracker_fixture.py
tests/wordall/: test_game_tracker.py
